--- a/css/main.css
+++ b/css/main.css
@@ -402,12 +402,21 @@ footer .social-links {
 }
 
 @media only screen and (min-width: 768px) and (max-width:1023px ) {
+
+
     .container {
         width: 100%;
         margin: 10px auto;
         max-width: 1440px;
         padding-bottom: 0.18em;
     }
+
+    /*
+        En esta caso solo se cambiaron valores de wrap para que estos funcionaran como filas
+        en vez de columnas, no se edito demasiado del diseño puesto a que no se tiene una imagen 
+        base para la resolución, se consideró dejar los forms en columna por cuestiones esteticas.
+            
+    */
 
     .post ul {
         list-style: none;
@@ -447,6 +456,7 @@ footer .social-links {
         margin-top: 1em;
     }
 
+    /*pequeños arreglos a parte de post*/
     .post ul img {
         width: 300px;
         height: 150;
@@ -457,6 +467,7 @@ footer .social-links {
         height: auto;
     }
 
+    /*iconos*/
     .fab {
         font-size:  65px;
         margin: 10px;
